# SEC

./: README.md
main/: CMakeLists.txt  GUI.c  GUI.h  Kconfig.projbuild  PROJET_merged_i2c_ble.c  TimeManagement.c  TimeManagement.h  compass_cross.c  hours_arm.c  hours_hand.c  main.c  minutes_arm.c  minutes_hand.c  project_GUI_copy_main.c  project_GUI_main.c  seconds_arm.c  seconds_hand.c  watchface_background.c
main/components/ble/: ble_func.c  ble_func.h
main/components/i2c/: i2c_func.c  i2c_func.h
main/components/lis2mdl/: lis2mdl_reg.c  lis2mdl_reg.h
main/components/lsm6dso/: lsm6dso_reg.c  lsm6dso_reg.h
